# FairClip

./: .gitignore  CLAUDE.md  fairclip.yml  main.py  pyproject.toml  实验复现指南.md  项目结构与运行指南.md
FairCLIP/: evaluate_CLIP.py  finetune_CLIP.py  finetune_FairCLIP.py
FairCLIP/scripts/: evaluate_CLIP.sh  finetune_CLIP.sh  finetune_CLIP_marital.sh  finetune_FairCLIP_ethnicity.sh  finetune_FairCLIP_gender.sh  finetune_FairCLIP_language.sh  finetune_FairCLIP_marital.sh  finetune_FairCLIP_race.sh
FairCLIP/src/: modules.py
LAVIS/: setup.py
LAVIS/lavis/projects/blip2/train/: pretrain_stage1.yaml  pretrain_stage2.yaml
LAVIS/lavis/tasks/: base_task.py
docs/: notes.md
mae/: evaluate.sh  evaluate_blip2_gpt-4.out  evaluate_blip2_original.sh  main_linprobe.py
mae/util/: misc.py
src/: blip_eval.py  dataset_deidentification_summarization.py  fundus_dataloader.py
