[project]
name = "fairclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9.19"
dependencies = [
    "diffusers==0.16.0",
    "fairlearn==0.9.0",
    "geomloss==0.2.6",
    "huggingface-hub==0.17.3",
    "numpy==1.23.5",
    "open-clip-torch==2.23.0",
    "openai-clip==1.0.1",
    "salesforce-lavis",
    "scikit-image==0.22.0",
    "scikit-learn>=1.6.1",
    "torch==2.2.2",
    "transformers==4.34.1",
]
